2015-09-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade pexports package to version 0.47

	* mingw32/mingw32-pexports.xml: Add new release specifications.
	* common/issue.log mingw32/issue.log: Update accordingly.

2015-09-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix MinGW-Bug [#2216]: error in gettext-0.18.3.2 packaging.

	* mingw32-gettext.xml (all package components): Add new release
	specifications, at version 0.18.3.2-2; these effectlively duplicate
	the version 0.18.3.2-1 package set, but with all offending *.la files
	removed from the archive corresponding to the gettext-dev component.
	* common/issue.log mingw32/issue.log: Update accordingly.

2015-08-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade GNU MPC package set to version 1.0.2

	* mingw32/mingw32-mpc.xml: Add new release specifications.
	(mpc) <info>: New subpackage; specify it, as initial release.
	* common/issue.log mingw32/issue.log: Update accordingly.

2015-08-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Revert corruption of file attributes (again).

	* common/issue.log mingw32/issue.log msys/issue.log: Reset bogus
	executable attribute.

2015-07-03  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgrade dos2unix to version 7.2.3.

	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 7.2.3.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 7.2.3.
	* mingw32/issue.log: Updated accordingly.
	* msys/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

2015-05-26  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgrade dos2unix to version 7.2.2.

	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 7.2.2.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 7.2.2.
	* mingw32/issue.log: Updated accordingly.
	* msys/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

2014-08-26  Keith Marshall  <keithmarshall@users.sourceforge.net>
