@@ -23,31 +23,21 @@
       <licence tarname="binutils-%-mingw32-lic.tar.%" />
 
       <component class="bin">
-        <release tarname="binutils-2.24-1-mingw32-bin.tar.xz" >
-          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
-        </release>
+        <release tarname="binutils-2.25.1-1-mingw32-bin.tar.lzma" />
+        <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
+        <release tarname="binutils-2.24-1-mingw32-bin.tar.xz" />
         <release tarname="binutils-2.23.2-1-mingw32-bin.tar.lzma" >
           <requires eq="binutils-%-mingw32-dev.tar.lzma" />
           <requires eq="mingw32-libz-*-dll-1.tar" />
           <requires eq="mingw32-libgcc-*-dll-1.tar" />
         </release>
-        <release tarname="binutils-2.23.1-1-mingw32-bin.tar.lzma" >
-          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
-        </release>
-        <release tarname="binutils-2.22-1-mingw32-bin.tar.lzma" >
-          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
-        </release>
-        <release tarname="binutils-2.21.53-1-mingw32-bin.tar.lzma" >
-          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
-        </release>
-        <release tarname="binutils-2.21.1-2-mingw32-bin.tar.lzma" >
-          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
-        </release>
-        <release tarname="binutils-2.21.1-1-mingw32-bin.tar.lzma" />
-        <release tarname="binutils-2.21-3-mingw32-bin.tar.lzma" >
-          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
-        </release>
+        <release tarname="binutils-2.23.1-1-mingw32-bin.tar.lzma" />
+        <release tarname="binutils-2.22-1-mingw32-bin.tar.lzma" />
+        <release tarname="binutils-2.21.53-1-mingw32-bin.tar.lzma" />
+        <release tarname="binutils-2.21-3-mingw32-bin.tar.lzma" />
         <release tarname="binutils-2.21-2-mingw32-bin.tar.lzma" />
+        <release tarname="binutils-2.21.1-2-mingw32-bin.tar.lzma" />
+        <release tarname="binutils-2.21.1-1-mingw32-bin.tar.lzma" />
         <release tarname="binutils-2.20.51-1-mingw32-bin.tar.lzma" />
         <release tarname="binutils-2.20.1-2-mingw32-bin.tar.gz" />
         <release tarname="binutils-2.20-1-mingw32-bin.tar.gz" />
@@ -55,15 +45,17 @@
       </component>
 
       <component class="dev">
+        <release tarname="binutils-2.25.1-1-mingw32-dev.tar.xz" />
         <release tarname="binutils-2.24-1-mingw32-dev.tar.xz" />
         <release tarname="binutils-2.23.2-1-mingw32-dev.tar.lzma" />
       </component>
 
       <component class="doc">
         <description lang="en">
-          <paragraph>As of release 2.24-1, this "doc" subpackage has been
-            superseded by the "info" and "man" subpackages; this subpackage
-            now delivers no content, and may be safely removed.
+          <paragraph>As of release 2.24-1, this "doc" component package has
+            been superseded by the "info" and "man" component packages; this
+            component package now delivers no content, will not be updated
+            for subsequent releases, and may be safely removed.
           </paragraph>
         </description>
         <release tarname="binutils-2.24-1-mingw32-doc.tar.xz">
@@ -82,16 +74,19 @@
       </component>
 
       <component class="info">
+        <release tarname="binutils-2.25.1-1-mingw32-info.tar.xz" />
         <release tarname="binutils-2.24-1-mingw32-info.tar.xz" />
         <release tarname="binutils-2.23.2-1-mingw32-info.tar.lzma" />
       </component>
 
       <component class="man">
+        <release tarname="binutils-2.25.1-1-mingw32-man.tar.xz" />
         <release tarname="binutils-2.24-1-mingw32-man.tar.xz" />
         <release tarname="binutils-2.23.2-1-mingw32-man.tar.lzma" />
       </component>
 
       <component class="lang">
+        <release tarname="binutils-2.25.1-1-mingw32-lang.tar.xz" />
         <release tarname="binutils-2.24-1-mingw32-lang.tar.xz" />
         <release tarname="binutils-2.23.2-1-mingw32-lang.tar.lzma" />
         <release tarname="binutils-2.23.1-1-mingw32-lang.tar.lzma" />
